Fix modals on mobile.

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -39,7 +39,9 @@ textarea {
 }
 
 .no-scroll,
-.ReactModal__Body--open {
+.ReactModal__Body--open,
+.ReactModal__Body--open body {
+  height: 100% !important;
   overflow: hidden !important;
   overflow-y: hidden !important;
   -webkit-overflow-scrolling: inherit !important;
