--- a/app/styles/common/header.css
+++ b/app/styles/common/header.css
@@ -111,6 +111,8 @@
   height: 100%;
   z-index: 10000;
   position: fixed;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch !important;
 }
 
 .mobile-nav-top {
