--- a/app/styles/modal/common.css
+++ b/app/styles/modal/common.css
@@ -87,6 +87,7 @@
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    overflow-y: auto;
     align-items: stretch;
     -webkit-overflow-scrolling: touch;
   }
